--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,94 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+body {
+  padding: 4rem 0 0;
+}
+
+/* LAYOUT
+/* ================================================================================================================== */
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: .5rem 0;
+  background: #fff;
+  z-index: 100;
+  @extend .shadow-sm;
+}
+
+.main {
+  @extend .container;
+  flex-wrap: wrap;
+  display: flex;
+  padding: 0;
+  min-height: 600px;
+
+  & .section {
+    @extend .col;
+  }
+
+  & .aside {
+    @extend .col-md-4;
+    @extend .col-lg-3;
+  }
+}
+
+.footer {
+  margin: 2rem 0 0;
+  padding: 2rem 0 0;
+  background: #fff;
+  &-copy {
+    background: #f5f5f8;
+    margin-top: 2rem;
+    font-size: .8rem;
+    color: #6a7086;
+    line-height: 3rem;
+    & p {
+      @extend .container;
+      margin: 0 auto;
+    }
+  }
+}
+
+
+/* COMPONENTS
+/* ================================================================================================================== */
+.menu-main {
+  display: inline-block;
+  &__list {
+    margin: 0;
+    padding: 0;
+    font-size: 0;
+    list-style: none;
+  }
+  &__item {
+    display: inline-block;
+  }
+  &__link {
+    display: block;
+    padding: 0 .5rem;
+    font-size: 1rem;
+  }
+}
+
+.menu-auth {
+  display: inline-block;
+  float: right;
+  &__list {
+    margin: 0;
+    padding: 0;
+    font-size: 0;
+    list-style: none;
+  }
+  &__item {
+    display: inline-block;
+  }
+  &__link {
+    display: block;
+    padding: 0 .5rem;
+    font-size: 1rem;
+  }
+}
