--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,13 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+
+
+* {
+  outline: none !important;
+}
+
+
 body {
   padding: 4rem 0 0;
 }
@@ -65,6 +72,8 @@ body {
 
 /* COMPONENTS
 /* ================================================================================================================== */
+
+/* MAIN MENU */
 .menu-main {
   display: inline-block;
   &__list {
@@ -82,7 +91,53 @@ body {
     font-size: 1rem;
   }
 }
+.button-menu {
+  display: none;
+  position: relative;
+  border: none;
+  padding: 0 0.5rem;
+  background: transparent;
+  z-index: 100;
+  &__line {
+    display: block;
+    margin: .25rem 0;
+    width: 1.5rem;
+    height: 2px;
+    background: #3f4350;
+    transition: width .15s linear;
+  }
+}
 
+@media (max-width: 768px) {
+  .menu-main {
+    position: absolute;
+    top: 0;
+    left: -100%;
+    padding: 3rem 1rem;
+    width: 60%;
+    background: #fff;
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.2);
+    transition: left .15s linear;
+    z-index: 90;
+  }
+  .button-menu {
+    display: inline-block;
+  }
+  .menu-open {
+    & .menu-main {
+      left: 0;
+    }
+    & .button-menu {
+      &__line:nth-child(2) {
+        width: .75rem;
+        background: #df0031;
+      }
+    }
+  }
+}
+
+
+/* AUTH MENU */
 .menu-auth {
   display: inline-block;
   float: right;
