--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700&display=swap);@charset "UTF-8";
 
 /*!
  * Bootstrap v4.3.1 (https://getbootstrap.com/)
@@ -10691,7 +10691,9 @@ a.text-dark:focus {
 }
 
 body {
+  background: #fff;
   padding: 4rem 0 0;
+  font-family: "Montserrat", sans-serif;
 }
 
 /* LAYOUT
@@ -10830,5 +10832,59 @@ body {
   display: block;
   padding: 0 0.5rem;
   font-size: 1rem;
+}
+
+/* USER CARD */
+
+.user-card {
+  display: flex;
+  border-bottom: 1px Solid #f5f5f8;
+  padding: 0.5rem 0;
+}
+
+.user-card:last-child {
+  border: none;
+}
+
+.user-card__photo {
+  position: relative;
+  margin: 0 0.5rem 0 0;
+}
+
+.user-card__photo img {
+  height: 3rem;
+  width: 3rem;
+  border-radius: 1.5rem;
+}
+
+.user-card__information {
+  width: 100%;
+}
+
+.user-card__name {
+  font-weight: 600;
+}
+
+.user-card__status {
+  color: #a9a9a9;
+  font-size: 0.7rem;
+  letter-spacing: 0.015rem;
+}
+
+.user-card__dot-status:before {
+  content: "";
+  position: absolute;
+  right: 0.2rem;
+  bottom: 0.2rem;
+  height: 0.4rem;
+  width: 0.4rem;
+  background: #bbd0ea;
+  border-radius: 0.2rem;
+  box-shadow: 0 0 0 0.15rem #fff;
+}
+
+.user-card__dot-status--online:before {
+  content: "";
+  background: #00d006;
 }
 
