--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,5 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700&display=swap');
 
 // Variables
 @import 'variables';
@@ -15,7 +15,9 @@
 
 
 body {
+  background: #fff;
   padding: 4rem 0 0;
+  font-family: 'Montserrat', sans-serif;
 }
 
 /* LAYOUT
@@ -156,3 +158,53 @@ body {
     font-size: 1rem;
   }
 }
+
+
+
+/* USER CARD */
+.user-card {
+  display: flex;
+  border-bottom: 1px Solid #f5f5f8;
+  padding: .5rem 0;
+  &:last-child {
+    border: none;
+  }
+  &__photo {
+    position: relative;
+    margin: 0 .5rem 0 0;
+    & img {
+      height: 3rem;
+      width: 3rem;
+      border-radius: 1.5rem;
+    }
+  }
+  &__information {
+    width: 100%;
+  }
+  &__name {
+    font-weight: 600;
+  }
+  &__status {
+    color: #a9a9a9;
+    font-size: 0.7rem;
+    letter-spacing: .015rem;
+  }
+  &__dot-status {
+    &:before {
+      content: "";
+      position: absolute;
+      right: 0.2rem;
+      bottom: 0.2rem;
+      height: 0.4rem;
+      width: 0.4rem;
+      background: #bbd0ea;
+      border-radius: 0.2rem;
+      box-shadow: 0 0 0 0.15rem #fff;
+    }
+    &--online:before {
+      content: '';
+      background: #00d006;
+    }
+  }
+}
+
