--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8078,8 +8078,7 @@ button.bg-dark:focus {
   white-space: normal;
 }
 
-.shadow-sm,
-.header {
+.shadow-sm {
   box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
 }
 
@@ -10709,9 +10708,10 @@ body {
   top: 0;
   left: 0;
   right: 0;
-  padding: 0.5rem 0;
+  padding: 0.85rem 0;
   background: #fff;
   z-index: 100;
+  box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.05);
 }
 
 .header__logo {
@@ -10768,6 +10768,13 @@ body {
   display: block;
   padding: 0 0.5rem;
   font-size: 1rem;
+  font-weight: 500;
+  color: #000;
+}
+
+.menu-main__link:hover {
+  color: #9d2aff;
+  text-decoration: none;
 }
 
 .button-menu {
@@ -10837,6 +10844,13 @@ body {
   display: block;
   padding: 0 0.5rem;
   font-size: 1rem;
+  font-weight: 500;
+  color: #000;
+}
+
+.menu-auth__link:hover {
+  color: #9d2aff;
+  text-decoration: none;
 }
 
 /* USER CARD */
