--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -212,7 +212,7 @@ body {
       border-radius: 50%;
     }
   }
-  &__information {
+  &__info {
     width: 100%;
   }
   &__name {
@@ -224,21 +224,9 @@ body {
     letter-spacing: .015rem;
   }
   &__dot-status {
-    &:before {
-      content: "";
-      position: absolute;
-      right: 0.2rem;
-      bottom: 0.2rem;
-      height: 0.4rem;
-      width: 0.4rem;
-      background: #bbd0ea;
-      border-radius: 0.2rem;
-      box-shadow: 0 0 0 0.15rem #fff;
-    }
-    &--online:before {
-      content: '';
-      background: #00d006;
-    }
+    position: absolute;
+    right: 0;
+    bottom: 0.1rem;
   }
 }
 
